# SDOM

./: .clang-tidy  .gitignore  .version_last_hash  .version_patch  CMakeLists.txt  CMakeLists.txt.old  LICENSE  README.md  _config.yaml  index.html  rebuild
--outDir/: compile_err.txt  sdom_capi_objects.h
.githooks/: pre-commit
.github/workflows/: ci-sanitizers.yml  pages.yml
assets/WIP/: SDOM_EventTypeHash.hpp  SDOM_SDL_EventTypeNames.hpp  SDOM_internal_icon_16x16.cpp  SDOM_internal_icon_8x8.hpp  board-rough.aseprite  default_8x12.aseprite  default_8x8.aseprite  default_palette.pal  grayscale.pal  icon_8x8_backup.aseprite  internal_icon_12x12.aseprite  internal_icon_16x16.aseprite  internal_icon_8x8.aseprite  old_main.cpp
docs/: C_API_Layer_Design.md  Core_Function_Registry_Design.md  Doxyfile  IDataObject_binding_helpers.md  IDataObject_legacy.md  IPanelObject.md  SDOM_CAPI_Lua_Design_Complete.md  SDOM_CAPI_Lua_Design_Complete_Integrated.md  SDOM_Data_Registry_Design_Combined_v3_v4.md  SDOM_Data_Registry_Design_v3.md  Variant.md  architecture_overview.md  archive_progress.md  capi_function_identifiers.md  core_framework.md  core_refactor_plan.md  custom_object_lifecycle.md  data_registry_interface_and_generation.md  default_font_8x8.md  display_object_anchoring.md  dom_propagation.md  doxygen_header_template.md  event_design.md  exposing_hooks.md  extensible_factory.md  extensible_variant.md  footer.html  icon_8x8.md  index.html  interface_contract_policy.md  label_text_parsing.md  lua_binding.md  lua_commands_and_properties.md  main_loop_CAPI_functions.md  mainpage.md  migration_variants.md  object_handles.md  progress.md  scripting_and_configuration.md  startup_refactor.md  (+2 more)
docs/archive/: extensible_variant.md  progress-29Oct2025-7Nov2025.md  progress-6Jul2025-28Oct2025.md
docs/dot-vscode/: c_cpp_properties.json  tasks.json
docs/html/: IPanelObject_8md.html  README_8md.html  SDOM_8cpp.html  SDOM_8cpp.js  SDOM_8hpp.html  SDOM_8hpp.js  SDOM_8hpp_source.html  SDOM__APIRegistrar_8hpp.html  SDOM__APIRegistrar_8hpp.js  SDOM__APIRegistrar_8hpp_source.html  SDOM__ArrowButton_8cpp.html  SDOM__ArrowButton_8hpp.html  SDOM__ArrowButton_8hpp.js  SDOM__ArrowButton_8hpp_source.html  (+1484 more)
examples/test/: CMakeLists.txt  README.md  asan_lsan.supp  compile  dox  dox-old  main.cpp  main.cpp.old  perf.data  perf.data.old  repeat_tests.sh  run_asan.sh  sdom_paths.json  temp.cpp  test.sh  ver
examples/test/api_gen/: SDOM_CAPI_Events.h  sdom_capi_objects_generated.cpp  sdom_capi_objects_generated.h  sdom_event_bindings_generated.h  test_compile.c
examples/test/archive/: DisplayHandle_UnitTests.cpp  GarbageCollection_UnitTests.cpp  Stage_UnitTests.cpp  old_IDisplayObject_UnitTests.cpp
examples/test/archive/src/: Box_UnitTests.cpp  Event_UnitTests.cpp  Factory_UnitTests.cpp  GarbageCollection_UnitTests.cpp  Group_UnitTests.cpp
examples/test/assets/: font_8x12.aseprite  font_8x8.aseprite  internal_icon_12x12.aseprite
examples/test/docs/diagrams/: SDOM_Lua_Bindings.md
examples/test/docs/diagrams/SDOM_Lua_Bindings/: diagram-02.mmd  diagram-03.mmd  diagram-05.mmd  diagram-10.mmd  diagram-125.mmd  diagram-141.mmd  diagram-148.mmd  diagram-161.mmd  diagram-76.mmd
examples/test/examples/test/api_gen/: sdom_capi_objects.h  sdom_capi_objects_generated.h
examples/test/include/: Box.hpp  UnitTests.hpp  main_variants.hpp
examples/test/include/SDOM/CAPI/: SDOM_CAPI_Events.h
examples/test/json/: config.json
examples/test/lua/: config.lua  config_minimal.lua
examples/test/lua/callbacks/: event.lua  init.lua  listener_callbacks.lua  quit.lua  render.lua  unittest.lua  update.lua  window_resize.lua
examples/test/src/: ArrowButton_UnitTests.cpp  ArrowButton_UnitTests.lua  AssetHandle_UnitTests.cpp  AssetHandle_UnitTests.lua  BitmapFont_UnitTests.cpp  BitmapFont_UnitTests.lua  Box.cpp  Box_UnitTests.cpp  Button_UnitTests.cpp  Button_UnitTests.lua  Core_UnitTests.cpp  Core_UnitTests.lua  DataRegistry_UnitTests.cpp  DisplayHandle_UnitTests.cpp  DisplayObject_UnitTests.cpp  DomHandle_Focus_Interactive_UnitTest.cpp  DomHandle_Forward_Reflection_UnitTest.cpp  DomHandle_Geometry_UnitTest.cpp  DomHandle_Priority_Overloads_UnitTest.cpp  DomHandle_SortAndHighestLowest_UnitTest.cpp  DomHandle_Tab_UnitTest.cpp  DomHandle_UnitTests.cpp  EventType_CAPI_UnitTests.cpp  EventType_UnitTests.cpp  EventType_UnitTests.lua  Event_CAPI_UnitTests.cpp  Event_UnitTests.cpp  Event_UnitTests.lua  Factory_UnitTests.cpp  FrontEnd_UnitTests.cpp  GarbageCollection_UnitTests.cpp  Group_UnitTests.cpp  IDisplayObject_UnitTests.cpp  IDisplayObject_UnitTests.lua  LUA_UnitTests.cpp  Label_UnitTests.cpp  Run_CAPI_Tests.cpp  SDOM_IDisplayObject.cpp  SpriteSheet_UnitTests.cpp  Stage_UnitTests.cpp  (+17 more)
examples/test/src/CAPI/: sdom_capi_objects_generated.cpp
examples/test/test_include/: test_capi.h  test_capi_internal.hpp
lua/: api_stubs.lua  ui_symbols.lua
scripts/: export_mermaid.sh  gen_version.sh  progress  update_latest_anchor.sh  ver
src/: SDOM.cpp  SDOM_ArrowButton.cpp  SDOM_AssetHandle.cpp  SDOM_AssetObject.cpp  SDOM_BitmapFont.cpp  SDOM_Button.cpp  SDOM_CAPI.cpp  SDOM_CAPI_BindGenerator.cpp  SDOM_CBindingGenerator.cpp  SDOM_CLR.cpp  SDOM_CheckButton.cpp  SDOM_Checkbox.cpp  SDOM_Core.cpp  SDOM_CoreAPI.cpp  SDOM_Core_Lua.cpp  SDOM_Core_LuaHelpers.cpp  SDOM_DataRegistry.cpp  SDOM_DisplayHandle.cpp  SDOM_DisplayObject.cpp  SDOM_DomHandle.cpp  SDOM_Event.cpp  SDOM_EventManager.cpp  SDOM_EventType.cpp  SDOM_Factory.cpp  SDOM_Frame.cpp  SDOM_GeometryAPI.cpp  SDOM_Group.cpp  SDOM_Handle.cpp  SDOM_IAssetObject.cpp  SDOM_IBindGenerator.cpp  SDOM_IButtonObject.cpp  SDOM_IDataObject.cpp  SDOM_IDisplayObject.cpp  SDOM_IDisplayObjectAPI.cpp  SDOM_IDisplayObject_Lua.cpp  SDOM_IFontObject.cpp  SDOM_IPanelObject.cpp  SDOM_IRangeControl.cpp  SDOM_IRangeControl_scaffold.cpp  SDOM_IRangeObject.cpp  (+40 more)
tests/: generated_header_check.cpp
tools/: dataregistry_generator_stubs.cpp  run_c_api_e2e_test.cpp  run_c_binding_gen.sh  run_dataregistry_test  run_dataregistry_test.cpp  run_dataregistry_test_local  sdom_generate_bindings.cpp
(+384 files in other folders)
